added element to header and bg-image

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <nav class="header-navigation">
             <a href="/" class="logo">Web<span class="logo-span">Studio</span></a>
             <ul class="header-navigation-list">
-                <li ><a href="./index.html" class="header-navigation-link">Studio</a></li>
+                <li ><a href="./index.html" class="header-navigation-link current">Studio</a></li>
                 <li ><a href="" class="header-navigation-link">Portfolio</a></li>
                 <li ><a href="" class="header-navigation-link">Contacts</a></li>
             </ul>
