--- a/index.html
+++ b/index.html
@@ -264,42 +264,78 @@
     <h2 class="section-names">Our Portfolio</h2>
     <ul class="portfolio-list">
         <li class="portfolio-list-li">
-            <img src="./images/imgg.jpg" alt="Banking App" width="360" height="300" class="portfolio-photo">
+            <div class="portfolio-cover-container">
+                <img src="./images/imgg.jpg" alt="Banking App" width="360" height="300" class="portfolio-photo">
+                <p class="portfolio-cover-text">
+                    14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App
+                </p>
+            </div>
             <div class="portfolio-list-text">
                 <h3 class="portfolio-names">Banking App</h3>
                 <p class="portfolio-text">App</p>
             </div>
         </li>
         <li class="portfolio-list-li">
-            <img src="./images/img-4.jpg" alt="Cashless Payment" width="360" height="300" class="portfolio-photo">
+            <div class="portfolio-cover-container">
+                <img src="./images/img-4.jpg" alt="Cashless Payment" width="360" height="300" class="portfolio-photo">
+                <p class="portfolio-cover-text">
+                        14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App
+                    </p>
+            </div>
+
             <div class="portfolio-list-text">
                 <h3 class="portfolio-names">Cashless Payment</h3>
                 <p class="portfolio-text">Marketing</p>
             </div>
         </li >
         <li class="portfolio-list-li">
-            <img src="./images/img-5.jpg" alt="Meditation App" width="360" height="300" class="portfolio-photo">
+            <div class="portfolio-cover-container">
+                <img src="./images/img-5.jpg" alt="Meditation App" width="360" height="300" class="portfolio-photo">
+                <p class="portfolio-cover-text">
+                        14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App
+                    </p>
+            </div>
+
             <div class="portfolio-list-text">
                 <h3 class="portfolio-names">Meditation App</h3>
                 <p class="portfolio-text">App</p>
             </div>
         </li>
         <li class="portfolio-list-li">
-            <img src="./images/img-6.jpg" alt="Taxi Service" width="360" height="300" class="portfolio-photo">
+            <div class="portfolio-cover-container">
+                <img src="./images/img-6.jpg" alt="Taxi Service" width="360" height="300" class="portfolio-photo">
+                <p class="portfolio-cover-text">
+                        14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App
+                    </p>
+            </div>
+
             <div class="portfolio-list-text">
                 <h3 class="portfolio-names">Taxi Service</h3>
                 <p class="portfolio-text">Marketing</p>
             </div>
         </li>
         <li class="portfolio-list-li">
-            <img src="./images/img-7.jpg" alt="Screen Illustrations" width="360" height="300" class="portfolio-photo">
+            <div class="portfolio-cover-container">
+                <img src="./images/img-7.jpg" alt="Screen Illustrations" width="360" height="300" class="portfolio-photo">
+                <p class="portfolio-cover-text">
+                        14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App
+                    </p>
+            </div>
+
+    
             <div class="portfolio-list-text">
                 <h3 class="portfolio-names">Screen Illustrations</h3>
                 <p class="portfolio-text">Design</p>
             </div>
         </li>
         <li class="portfolio-list-li">
-            <img src="./images/img-8.jpg" alt="Online Courses" width="360" height="300" class="portfolio-photo">
+            <div class="portfolio-cover-container">
+                <img src="./images/img-8.jpg" alt="Online Courses" width="360" height="300" class="portfolio-photo">
+                <p class="portfolio-cover-text">
+                        14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App
+                    </p>
+            </div>
+
             <div class="portfolio-list-text">
                 <h3 class="portfolio-names">Online Courses</h3>
                 <p class="portfolio-text">Marketing</p>
